--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -138,7 +138,7 @@
 
                 <button type="submit">Calcular</button> <br><br>
 
-                <p>O valor total da casa é</p>
+                <p id="msgValorCasa">O valor total da casa é</p>
 
 
 
