--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -12,7 +12,7 @@
             *Exercício 1:* Crie uma representação de um algoritmo para calcular se o aluno foi aprovado ou não a partida da nota média de uma matéria. Considere que o valor mínimo para ser aprovado é 7 e a maior nota é 10. Informe se o aluno foi aprovado ou reprovado. 
         </p>
         <div>
-            <form id="formularioAluno">
+            <form id="studentForm">
                 <input id="nome" type="text" placeholder="Nome do Aluno">
                 <input min="0" max="10" required id="assessmentOne" type="number" placeholder="Prova 1">
                 <input min="0" max="10" required id="assessmentTwo" type="number" placeholder="Prova 2">
@@ -93,12 +93,11 @@
         </p>
         <div>
             <form id="housePriceForm">
-                <input id="areaConstruida" type="number" placeholder="Metros quadrados construídos">
-                <input id="Quartos" type="number" placeholder="Qtd de quartos Sem suíte">
+                <input id="constructedArea" type="number" placeholder="Metros quadrados construídos">
+                <input id="quarters" type="number" placeholder="Qtd de quartos Sem suíte">
                 <input id="suite" type="number" placeholder="Qtd de quartos Com suíte">
-                <input id="banheiro" type="number" placeholder="Qtd de banheiros">
-
-                <input id="vagaGaragem" type="number" placeholder="Qtd vagas na garagem"> <br>
+                <input id="bathroom" type="number" placeholder="Qtd de banheiros">
+                <input id="parkingSpaces" type="number" placeholder="Qtd vagas na garagem"> <br>
 
        
                 <label id="opcao5">
