refazendo o if and else

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -98,7 +98,6 @@
                 <input id="suite" type="number" placeholder="Qtd de quartos Com suíte">
                 <input id="bathroom" type="number" placeholder="Qtd de banheiros">
                 <input id="parkingSpaces" type="number" placeholder="Qtd vagas na garagem"> <br>
-
                 <label>
                     Possui dois pavimentos: <br>
                     <select id="optionYesOrNoFloors" name="listaOpcoes">
@@ -108,7 +107,7 @@
                 </label> <br> <br>
                     <label>
                         A casa tem piscina: <br>
-                        <select id="optionYesOrNoFloorsPool" name="listaOpcoes">
+                        <select id="optionYesOrNoPool" name="listaOpcoes">
                             <option value="sim">Sim</option>
                             <option value="nao">Não</option>
                         </select>
