--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercícios</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <section>
         <p>
-            *Exercício 1:* Crie uma representação de um algoritmo para calcular se o aluno foi aprovado ou não a partida da nota média de uma matéria. Considere que o valor mínimo para ser aprovado é 7 e a maior nota é 10. Informe se o aluno foi aprovado ou reprovado. 
+            *Exercício 1:* Crie uma representação de um algoritmo para calcular se o aluno foi aprovado ou não a partida
+            da nota média de uma matéria. Considere que o valor mínimo para ser aprovado é 7 e a maior nota é 10.
+            Informe se o aluno foi aprovado ou reprovado.
         </p>
         <div>
             <form id="studentForm">
-                <input id="nome" type="text" placeholder="Nome do Aluno">
-                <input min="0" max="10" required id="assessmentOne" type="number" placeholder="Prova 1">
-                <input min="0" max="10" required id="assessmentTwo" type="number" placeholder="Prova 2">
-                <input min="0" max="10" required id="assessmentThree" type="number" placeholder="Prova 3">
-                <input min="0" max="10" required id="assessmentFour" type="number" placeholder="Prova 4"> 
-                <button type="submit">calcular</button>   
-                <p id="aprovado">Aluno aprovado!!!</p>
-                <p id="reprovado">Aluno reprovado</p>
+                <input class="lesson" id="name" type="text" placeholder="Nome do Aluno">
+                <input class="lesson" min="0" max="10" required id="assessmentOne" type="number" placeholder="Prova 1">
+                <input class="lesson" min="0" max="10" required id="assessmentTwo" type="number" placeholder="Prova 2">
+                <input class="lesson" min="0" max="10" required id="assessmentThree" type="number"
+                    placeholder="Prova 3">
+                <input class="lesson" min="0" max="10" required id="assessmentFour" type="number" placeholder="Prova 4">
+                <button type="submit">calcular</button>
+                <p id="passOrFail"></p>
             </form>
         </div>
     </section>
@@ -29,7 +33,7 @@
             *Exercício 2:* Crie um algoritmo que realize o calculo de da área de um quadrado.
         </p>
         <div>
-            <form id="formSquareArea"></form>
+            <form id="formSquareArea">
                 <input id="sideOfSquare" type="number" required placeholder="Digite a medida em metros">
                 <p id="messageArea">resultado</p>
                 <button type="submit">Calcular</button>
@@ -39,7 +43,8 @@
     <section>
         <div>
             <p>
-                *Exercício 3:* Represente um algoritmo para realizar o calculo do IMC e informe ao usuário o resultado com base na seguinte classificação:
+                *Exercício 3:* Represente um algoritmo para realizar o calculo do IMC e informe ao usuário o resultado
+                com base na seguinte classificação:
             </p>
             <p>
                 - Menos de 18,5: Peso baixo <br>
@@ -62,7 +67,9 @@
     </section>
     <section>
         <p>
-            *Exercício 4:* Crie a representação de um algoritmo para realizar o consumo de combustível de uma frota de uma empresa de acordo com a a quilometragem rodada de um determinado dia. Dado que todos os carros utilizam gasolina, o preço cotado é de R$5,29 e os carros tem um consumo médio de 12km/L.
+            *Exercício 4:* Crie a representação de um algoritmo para realizar o consumo de combustível de uma frota de
+            uma empresa de acordo com a a quilometragem rodada de um determinado dia. Dado que todos os carros utilizam
+            gasolina, o preço cotado é de R$5,29 e os carros tem um consumo médio de 12km/L.
         </p>
         <div>
             <form id="formGasolineConsumption">
@@ -77,19 +84,20 @@
     <section>
         <p>
 
-    *Desafio:* Um gerente de uma imobiliária deseja criar um sistema para calcular o preço de um casa de acordo com suas especificações. <br>
+            *Desafio:* Um gerente de uma imobiliária deseja criar um sistema para calcular o preço de um casa de acordo
+            com suas especificações. <br>
 
-    Dado as seguintes informações: <br>
+            Dado as seguintes informações: <br>
 
-        - Preço do metro quadrado construído na região é de R$400 <br>
-        - Para cada quarto, adicione R$1000,00 <br>
+            - Preço do metro quadrado construído na região é de R$400 <br>
+            - Para cada quarto, adicione R$1000,00 <br>
             - Se for uma suíte acrescente mais R$250,00 <br>
-        - Para cada banheiro, adicione R$500,00 <br>
-        - Caso a case possua 2 pavimentos, adicione R$ 20.000,00 <br>
-        - Para cada espaço de garagem na casa, adiciona R$500,00 <br>
-        - Se a casa possuir piscina, adicione R$2.000,00, caso contrário é desvalorizada em R$ 1000,00 <br>
+            - Para cada banheiro, adicione R$500,00 <br>
+            - Caso a case possua 2 pavimentos, adicione R$ 20.000,00 <br>
+            - Para cada espaço de garagem na casa, adiciona R$500,00 <br>
+            - Se a casa possuir piscina, adicione R$2.000,00, caso contrário é desvalorizada em R$ 1000,00 <br>
 
-    Crie um algoritmo que, dada os dados de entradas necessários, realize o calculo do valor total da casa.
+            Crie um algoritmo que, dada os dados de entradas necessários, realize o calculo do valor total da casa.
         </p>
         <div>
             <form id="housePriceForm">
@@ -105,18 +113,19 @@
                         <option value="nao">Não</option>
                     </select>
                 </label> <br> <br>
-                    <label>
-                        A casa tem piscina: <br>
-                        <select id="optionYesOrNoPool" name="listaOpcoes">
-                            <option value="sim">Sim</option>
-                            <option value="nao">Não</option>
-                        </select>
-                    </label> <br> <br>
+                <label>
+                    A casa tem piscina: <br>
+                    <select id="optionYesOrNoPool" name="listaOpcoes">
+                        <option value="sim">Sim</option>
+                        <option value="nao">Não</option>
+                    </select>
+                </label> <br> <br>
                 <button type="submit">Calcular</button> <br><br>
-                <p id="msgValorCasa">O valor total da casa é</p>
+                <p id="msgPriceHouse">O valor total da casa é</p>
             </form>
         </div>
     </section>
     <script src="index.js"></script>
 </body>
+
 </html>
